actualizacion de componentes

--- a/src/App.css
+++ b/src/App.css
@@ -1,150 +1,160 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
+}
+
+.graffiti-text {
+    color: white;
+    font-family: 'Arial Black', sans-serif;
+    font-size: 40px;
+    background-color: rgb(82, 3, 3);
+    padding: 10px;
+    border-radius: 10px;
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 .scroll-container {
-  display: flex;
-  overflow-x: auto;
-  justify-content: center;
+    display: flex;
+    overflow-x: auto;
+    justify-content: center;
 }
 
 .scroll-container img {
-  margin: 10px;
-  max-width: 310px;
-  height: 400px;
-  transition: transform 0.3s;
-  display: flex;
-  border-radius: 12px;
+    margin: 10px;
+    max-width: 310px;
+    height: 400px;
+    transition: transform 0.3s;
+    display: flex;
+    border-radius: 12px;
 }
 
 .scroll-container img:hover {
-  cursor: pointer;
-  opacity: 0.9;
-  visibility: visible;
+    cursor: pointer;
+    opacity: 0.9;
+    visibility: visible;
 }
 
 .ver-mas {
-  color: rgb(118, 10, 10);
-  background-color: rgba(0, 0, 0, 0.5);
-  padding: 5px 10px;
-  margin-top: 5em;
-  font-size: 14px;
+    color: rgb(118, 10, 10);
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 5px 10px;
+    margin-top: 5em;
+    font-size: 14px;
 }
 
 #logo {
-  position: relative;
-  top: 0;
-  left: 0;
-  border-radius: 50%;
-  width: 14%;
-  height: 14%;
+    position: relative;
+    top: 0;
+    left: 0;
+    border-radius: 50%;
+    width: 14%;
+    height: 14%;
 }
+
 .sidebar {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .sidebar img {
-  width: 100px;
-  height: auto;
-  margin-bottom: 10px;
-  cursor: pointer;
+    width: 100px;
+    height: auto;
+    margin-bottom: 10px;
+    cursor: pointer;
 }
 
 .main img {
-  max-width: 500px;
-  height: auto;
+    max-width: 500px;
+    height: auto;
 }
 
 .menu-lateral {
-  display: flex;
-  flex-direction: center;
+    display: flex;
+    flex-direction: center;
 }
 
 .logo {
-  width: 150px; 
-  height: 50px; 
-  background-size: contain; 
-  background-repeat: no-repeat; 
-  margin: 10px; 
+    width: 150px;
+    height: 50px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin: 10px;
 }
 
 .menu {
-  list-style: none;
-  padding: 0;
-  margin: 10;
+    list-style: none;
+    padding: 0;
+    margin: 10;
 }
 
 .menu li {
-  padding: 10px;
-  cursor: pointer;
+    padding: 10px;
+    cursor: pointer;
 }
 
 .submenu {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  background-color: #555;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    background-color: #555;
 }
 
 .submenu li {
-  padding: 10px;
-  cursor: pointer;
+    padding: 10px;
+    cursor: pointer;
 }
 
 nav {
-  background-color: #333;
-  color: white;
+    background-color: #333;
+    color: white;
 }
 
 ul {
-  list-style-type: none;
-  padding: 0;
+    list-style-type: none;
+    padding: 0;
 }
 
 li {
-  display: inline;
-  margin-right: 10px;
+    display: inline;
+    margin-right: 10px;
 }
 
 a {
-  color: white;
-  text-decoration: none;
+    color: white;
+    text-decoration: none;
 }
-
-
