--- a/src/App.css
+++ b/src/App.css
@@ -13,17 +13,6 @@
     }
 }
 
-.graffiti-text {
-    color: white;
-    font-family: 'Arial Black', sans-serif;
-    font-size: 40px;
-    background-color: rgb(82, 3, 3);
-    padding: 10px;
-    border-radius: 10px;
-    text-align: center;
-    margin-bottom: 20px;
-}
-
 .App-header {
     background-color: #282c34;
     min-height: 100vh;
@@ -67,14 +56,6 @@
     cursor: pointer;
     opacity: 0.9;
     visibility: visible;
-}
-
-.ver-mas {
-    color: rgb(118, 10, 10);
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 5px 10px;
-    margin-top: 5em;
-    font-size: 14px;
 }
 
 #logo {
@@ -157,4 +138,56 @@ li {
 a {
     color: white;
     text-decoration: none;
+}
+
+
+/* Para dispositivos pequeños (320px o menos) */
+
+@media (max-width: 320px) {
+    .row-cols-sm-3>.col,
+    .row-cols-sm-6>.col,
+    .row-cols-sm-2>.col {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+}
+
+
+/* Para dispositivos medianos (576px o menos) */
+
+@media (max-width: 576px) {
+    .row-cols-sm-3>.col {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+}
+
+
+/* Para dispositivos grandes (768px o menos) */
+
+@media (max-width: 768px) {
+    .row-cols-sm-6>.col {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+}
+
+
+/* Para dispositivos extra grandes (992px o menos) */
+
+@media (max-width: 992px) {
+    .row-cols-md-4>.col {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+}
+
+
+/* Para dispositivos extra extra grandes (1200px o menos) */
+
+@media (max-width: 1200px) {
+    .row-cols-lg-3>.col {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
 }
